--- a/restaurante/index.html
+++ b/restaurante/index.html
@@ -132,18 +132,18 @@ Es así que el negocio fue creciendo y avanzando a paso firme hasta alcanzar un 
 
 			<div class="col-md-4 centered" style="border-left: 1px solid #CCCCCC;">
 				<i class="ion-spoon og"></i>
-				<h5>SERVICIOS</h5>
+				<h5>OFRECEMOS</h5>
 				<p class="text-p">
 					<ul style="display:inline-block; text-p; color: #6b6b6b; text-align: left; padding-left: 30px;">
-						• Ambiente climatizado<br />
+						• Ambiente <b>climatizado</b><br />
 						• Amplio y variado menú</br>
 						• Menú del día</br>
-						• Delivery las 24hs</br>
-						• Mesas en el interior del local o al aire libre</br>
-						• Reservas con precios especiales para grupos o contingentes</br>
-						• Platos especiales para: Celíacos, Diabéticos, Veganos, Vegetarianos</br>
+						• <b>Delivery</b> las 24hs</br>
+						• Mesas en el <b>interior</b> del local o al <b>aire libre</b></br>
+						• Reservas con <b>precios especiales</b> para grupos o contingentes</br>
+						• Platos especiales para: <b>Celíacos, Diabéticos, Veganos, Vegetarianos</b></br>
 						• Esmerada atención. Tiempo de espera aprox: 15 min</br>
-						• Amplio horario de atención</br>
+						• <b>Amplio horario</b> de atención</br>
 						• Desayunos – Almuerzo – Merienda – Cena – Café</br>
 						• Vasto menú de bebidas, jugos y licuados naturales</br>
 						• Capacidad para 150 personas (interior)</br>
@@ -279,7 +279,7 @@ Es así que el negocio fue creciendo y avanzando a paso firme hasta alcanzar un 
 	      <div class="modal-body">
 			  <img class="img-responsive aligncenter" src="assets/img/modalbg-pizza.jpg" alt="">
 			  <h4>Pizza a la priedra</h4>
-			  <p class="text-p">Algun parrafo que describa el plato.</p>
+			  <p class="text-p">Sí, esa exquisitez creada en Napoli, Italia, con todas sus variantes y deliciosos sabores.</p>
 			  <h5>Desde.......... $95 (grande) / $50 (chica) / $30 (pizzeta)</h5>
 	      </div>
 	      <div class="modal-footer">
@@ -300,7 +300,7 @@ Es así que el negocio fue creciendo y avanzando a paso firme hasta alcanzar un 
 	      <div class="modal-body">
 			  <img class="img-responsive aligncenter" src="assets/img/modalbg-lasagna.jpg" alt="">
 			  <h4>Lasagna</h4>
-			  <p class="text-p">Algun parrafo que describa el plato.</p>
+			  <p class="text-p">Considerada por muchos la reina de las pastas. ¿Vos coincidís?</p>
 			  <h5>Desde.......... $80</h5>
 	      </div>
 	      <div class="modal-footer">
@@ -316,13 +316,15 @@ Es así que el negocio fue creciendo y avanzando a paso firme hasta alcanzar un 
 	    <div class="modal-content">
 	      <div class="modal-header">
 	        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Cerrar</span></button>
-	        <h5 class="modal-title" id="myModalLabel">Paella</h5>
+	        <h5 class="modal-title" id="myModalLabel">Paella<sup>*</sup></h5>
 	      </div>
 	      <div class="modal-body">
 			  <img class="img-responsive aligncenter" src="assets/img/modalbg-paella.jpg" alt="">
-			  <h4>Paella</h4>
-		      <p class="text-p">Algun parrafo que describa el plato.</p>
-			  <h5>Desde.......... $no se el precio</h5>
+			  <h4>Paella<sup>*</sup></h4>
+		      <p class="text-p">Famoso plato español de origen napolitano que reúne las mejores características del mar y el arroz.</p>
+			  <h5>Desde.......... $80</h5>
+			  <br />
+			  <p class="text-p"><sup>*</sup> Disponible solo los días jueves.</p>
 	      </div>
 	      <div class="modal-footer">
 	        <button type="button" class="btn btn-warning" data-dismiss="modal">Cerrar</button>
