--- a/restaurante/index.html
+++ b/restaurante/index.html
@@ -456,7 +456,7 @@ Es así que el negocio fue creciendo y avanzando a paso firme hasta alcanzar un 
 			    <div class="form-group">
 				    <label for="exampleInputFile" class="col-sm-3 control-label">Curriculum</label>
 				    <div class="col-sm-8">
-					    <input type="file" id="exampleInputFile">
+					    <input type="file" name="adjunto" id="exampleInputFile">
 					    <p class="help-block">Adjunte su CV.</p>
 					</div>
 				</div>
