--- a/supermercado/comprar/index.html
+++ b/supermercado/comprar/index.html
@@ -33,7 +33,8 @@
 </head><!--/head-->
 
 <body data-spy="scroll" data-target="#navbar" data-offset="0">
-    <header id="header" role="banner">
+    <header id="header" role="banner" ng-controller="HeaderCtrl">
+
         <div class="container">
             <div id="navbar" class="navbar navbar-default">
                 <div class="navbar-header">
@@ -48,7 +49,7 @@
                 <div class="collapse navbar-collapse">
                     <div class="row">
                       <div class="col-lg-6 col-lg-offset-12">
-                          <input type="text" class="form-control" placeholder="Buscar productos por nombre..." style="margin-top: 20px;">
+                          <input type="search" class="form-control" placeholder="Buscar productos por nombre..." style="margin-top: 20px;" ng-model="searchInput"  ng-model-options="{debounce: 1000}" ng-change="change()">
                       </div><!-- /.col-lg-6 -->
                       <div class="col-lg-1 right" style="float: right; ">
                         <ul class="nav navbar-nav">
