--- a/supermercado/comprar/index.html
+++ b/supermercado/comprar/index.html
@@ -44,7 +44,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html"></a>
+                    <a class="navbar-brand" href="#/"></a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <div class="row">
@@ -53,7 +53,7 @@
                       </div><!-- /.col-lg-6 -->
                       <div class="col-lg-1 right" style="float: right; ">
                         <ul class="nav navbar-nav">
-                            <li class="active"><a href="#"><i class="icon-shopping-cart"></i></a></li>
+                            <li class="active"><a href="#/carrito"><i class="icon-shopping-cart" ng-click="goToCarrito()"></i></a></li>
                         </ul>
                       </div>
                     </div>
