comienzo de cambios finales

--- a/restaurante/index.html
+++ b/restaurante/index.html
@@ -51,7 +51,7 @@
             <li><a href="#">Inicio</a></li>
             <li><a href="#platos">Platos</a></li>
             <li><a href="#contacto">Contacto</a></li>
-            <li class="active"><a data-toggle="modal" href="#delivery" title="Terms of Use">Delivery las 24hs</a></li>
+            <li class="active"><a data-toggle="modal" href="#delivery" title="Terms of Use">Delivery: amplio horario de entrega</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -111,7 +111,7 @@
 				<i class="ion-fork og"></i>
 				<h5>HISTORIA</h5>
 				<p class="text-p">"Pascual Velardita, fundador del restaurante, emigra desde Italia e incursiona en diferentes rubros trabajando desde muy joven.
-En 1972 compra una pizzería, y con la ayuda de Susana Gonzalez comienzan a transitar un camino de sacrificio, esfuerzo y mucha dedicación.
+En 1972 estando recién casados Pascual y betty Gonzalez adquieren la pizzería y comienzan a transitar un camino de sacrificio, esfuerzo y mucha dedicación.
 Pensando en el progreso, anexan una panadería y producen todos los insumos para la pizzería, asegurando desde el inicio la calidad. 
 Es así que el negocio fue creciendo y avanzando a paso firme hasta alcanzar un reconocimiento y una tradición inigualable."</p>
 			</div><!--/col-md-6 -->
@@ -138,10 +138,10 @@ Es así que el negocio fue creciendo y avanzando a paso firme hasta alcanzar un 
 						• Ambiente <b>climatizado</b><br />
 						• Amplio y variado menú</br>
 						• Menú del día</br>
-						• <b>Delivery</b> las 24hs</br>
+						• <b>Delivery</b>: amplio horario de entrega</br>
 						• Mesas en el <b>interior</b> del local o al <b>aire libre</b></br>
 						• Reservas con <b>precios especiales</b> para grupos o contingentes</br>
-						• Platos especiales para: <b>Celíacos, Diabéticos, Veganos, Vegetarianos</b></br>
+						• Platos especiales para: <b>Diabéticos, Vegetarianos</b></br>
 						• Esmerada atención. Tiempo de espera aprox: 15 min</br>
 						• <b>Amplio horario</b> de atención</br>
 						• Desayunos – Almuerzo – Merienda – Cena – Café</br>
