ultimo ajustes de los cambios de victor

--- a/freskito/index.html
+++ b/freskito/index.html
@@ -203,7 +203,8 @@ Hoy el frigor&iacute;fico brinda a sus clientes un servicio profesional y de alt
 				<h1 class="centered">C&Oacute;MO ENFRIAR EN 3 MINUTOS</h1>
 				<hr>
                 <div class="col-lg-12">
-                    <p>Si desea conocer el proceso para realizar el enfriamiento en 3 minutos, puede descargar el instructivo haciendo click <a href="grafica_bebida.zip">aqu&iacute;</a>
+                	<img src="assets/img/grafico.gif">
+                    <p>Si desea, puede descargar el instructivo haciendo click <a href="grafica_bebida.zip">aqu&iacute;.</a>
                     </p>
                 </div>
             </div>
