ultimas correcciones frigo napoli

--- a/frigorifico_napoli/index.html
+++ b/frigorifico_napoli/index.html
@@ -44,7 +44,7 @@
 </head>
 <body id="pageBody">
 
-<div id="decorative2">
+<div id="decorative2" style="height: 155px;">
     <div class="container">
 
         <div class="divPanel topArea notop nobottom">
@@ -52,20 +52,22 @@
                 <div class="span12">
 
                     <div class="pull-left">
-                        <img src="images/logo-baja.png" style="width: 180px; height: auto; margin: 5px; padding: 0;" alt="">
+                        <img src="images/logo-baja.png" style="width: 200px; height: auto; margin: 5px; padding: 0;" alt="">
                         <!--
                         <a href="index.html" id="divSiteTitle">Your Name Here</a><br />
                         <a href="index.html" id="divTagLine">Your Tag Line Here</a>
                         -->
                     </div>
-
+                    <div class="span3">
+                        <p style="margin-top: 46px;">Distribuidores Exclusivo de: <br /><img src="images/logo-la-granja.jpg" style="width: 50px;" alt=""><img src="images/logo-la-granja.jpg" style="width: 50px;" alt=""><img src="images/logo-la-granja.jpg" style="width: 50px;" alt=""><img src="images/logo-la-granja.jpg" style="width: 50px;" alt=""><img src="images/logo-la-granja.jpg" style="width: 50px;" alt=""></p>
+                    </div>
                     <div id="divMenuRight" class="pull-right">
                     <div class="navbar">
                         <button type="button" class="btn btn-navbar-highlight btn-large btn-primary" data-toggle="collapse" data-target=".nav-collapse">
                             NAVEGACIÓN <span class="icon-chevron-down icon-white"></span>
                         </button>
                         <div class="nav-collapse collapse">
-                            <ul class="nav nav-pills ddmenu">
+                            <ul class="nav nav-pills ddmenu" style="margin-top: 55px;">
                                 <li class="dropdown active" id ="inicioHref"><a href="#">Inicio</a></li>
 								<li class="dropdown" id ="calidadHref"><a href="#">Calidad</a></li>
                                 <li class="dropdown" id ="productosHref"><a href="#">Productos</a></li>
@@ -125,6 +127,15 @@
                                 </div>
                                 <div data-src="images/milanesa-la-granja.jpg" >
                                     <div class="camera_caption fadeFromBottom cap1">Milanesa de pollo "la granja" (elaboración propia)</div>
+                                </div>
+                                <div data-src="images/pollo-fresco.jpg" >
+                                    <div class="camera_caption fadeFromBottom cap1">Pollo fresco de primera calidad</div>
+                                </div>
+                                <div data-src="images/fiambres-comarca.jpg" >
+                                    <div class="camera_caption fadeFromBottom cap1">Fiambres La Comarca</div>
+                                </div>
+                                <div data-src="images/cerdo-congelado.jpg" >
+                                    <div class="camera_caption fadeFromBottom cap1">Cortes de Cerdo congelados</div>
                                 </div>
                             </div>
 							<!--End Camera Slider here-->
@@ -403,7 +414,7 @@
 				    <hr style="margin:45px 0 35px" />
                     <div id="goToLaGranja"></div>
                     <div class="lead">
-                        <div id="divHeaderLine1">La Granja</div><br /><br />
+                        <div id="divHeaderLine1"><img src="images/logo-la-granja.jpg" style="    width: 200px;" alt=""></div><br /><br />
                         <h3>El establecimiento “La Granja” elabora productos derivados del pollo.</h3>
                     </div>
                     <br />
@@ -422,7 +433,7 @@
                     </div> 
                     -->
 					
-					<p><img src="images/circle-granja.jpg" class="img-circle pull-right" style="margin:5px 15px 10px;" alt=""><br />El establecimiento “La Granja” elabora productos derivados del pollo. Milanesas, alas, ranchos y menudos. En su producción se utiliza materia prima de alta calidad; pollos frescos “G.T.A.”
+					<p><!--<img src="images/circle-granja.jpg" class="img-circle pull-right" style="margin:5px 15px 10px;" alt=""><br />-->El establecimiento “La Granja” elabora productos derivados del pollo. Milanesas, alas, ranchos y menudos. En su producción se utiliza materia prima de alta calidad; pollos frescos “G.T.A.”
                     Dichos pollos se crían en granjas que están ubicadas en las provincias de Buenos Aires y Entre Ríos equipadas con toda la tecnología necesaria para lograr el bienestar del animal. Siempre aplicando el concepto de trazabilidad. Este concepto sumado a todos los controles sanitarios, aseguran la calidad de nuestros productos.</p></br>
                     <div style="text-align: center"><a data-toggle="modal" href="#granjaModal2" style="color: #de0108;">Ver productos LA GRANJA</a></div>
 					<!--Edit Blockquote here
