ultimo cambios resto

--- a/restaurante/index.html
+++ b/restaurante/index.html
@@ -110,10 +110,7 @@
 			<div class="col-md-4 centered">
 				<i class="ion-fork og"></i>
 				<h5>HISTORIA</h5>
-				<p class="text-p">"Pascual Velardita, fundador del restaurante, emigra desde Italia e incursiona en diferentes rubros trabajando desde muy joven.
-En 1972 estando recién casados Pascual y betty Gonzalez adquieren la pizzería y comienzan a transitar un camino de sacrificio, esfuerzo y mucha dedicación.
-Pensando en el progreso, anexan una panadería y producen todos los insumos para la pizzería, asegurando desde el inicio la calidad. 
-Es así que el negocio fue creciendo y avanzando a paso firme hasta alcanzar un reconocimiento y una tradición inigualable."</p>
+				<p class="text-p">"Siendo un niño, Pascual Velardita emigra desde Italia e incursiona en diferentes rubros trabajando desde muy joven. En 1972, junto a su esposa Susana Beatriz González, adquieren la pizzería y comienzan a transitar un camino de sacrificio, esfuerzo y mucha dedicación. Pensando en el progreso, anexan una panadería y producen todos los insumos para la pizzería, asegurando desde el inicio la calidad de todos su productos. Es así que el negocio fue creciendo y avanzando a paso firme hasta alcanzar un reconocimiento y una tradición inigualable, que lleva más de 43 años."</p>
 			</div><!--/col-md-6 -->
 
 			<div class="col-md-4 centered">
@@ -239,9 +236,9 @@ Es así que el negocio fue creciendo y avanzando a paso firme hasta alcanzar un 
 			<div class="col-md-10 col-md-offset-1">
 				<div id="mi-slider" class="mi-slider">
 					<ul>
-						<li><a data-toggle="modal" data-target="#pizzaModal"><img src="assets/img/food/pizza.png" alt="img01"><h4>Pizza a la piedra</h4></a></li>
-						<li><a data-toggle="modal" data-target="#lasagnaModal"><img src="assets/img/food/lasagna.png" alt="img02"><h4>Lasagna</h4></a></li>
-						<li><a data-toggle="modal" data-target="#paellaModal"><img src="assets/img/food/paella.png" alt="img03"><h4>Paella</h4></a></li>
+						<li><a data-toggle="modal" data-target="#pizzaModal"><img src="assets/img/food/pizza.png" alt="img01"><h4>Pizzas a la piedra, Fugazzeta como especial</h4></a></li>
+						<li><a data-toggle="modal" data-target="#lasagnaModal"><img src="assets/img/food/lasagna.png" alt="img02"><h4>Lasagna<br />&nbsp;<br />&nbsp;</h4></a></li>
+						<li><a data-toggle="modal" data-target="#paellaModal"><img src="assets/img/food/paella.png" alt="img03"><h4>Paella<br />&nbsp;<br />&nbsp;</h4></a></li>
 						<!--
 						<li><a data-toggle="modal" data-target="#myModal"><img src="assets/img/food/4.png" alt="img04"><h4>Bouillabaisse</h4></a></li>
 						-->
@@ -274,11 +271,11 @@ Es así que el negocio fue creciendo y avanzando a paso firme hasta alcanzar un 
 	    <div class="modal-content">
 	      <div class="modal-header">
 	        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Cerrar</span></button>
-	        <h5 class="modal-title" id="myModalLabel">Pizza a la priedra</h5>
+	        <h5 class="modal-title" id="myModalLabel">Pizzas a la piedra, Fugazzeta como especial</h5>
 	      </div>
 	      <div class="modal-body">
 			  <img class="img-responsive aligncenter" src="assets/img/modalbg-pizza.jpg" alt="">
-			  <h4>Pizza a la priedra</h4>
+			  <h4>Pizzas a la piedra, Fugazzeta como especial</h4>
 			  <p class="text-p">Sí, esa exquisitez creada en Napoli, Italia, con todas sus variantes y deliciosos sabores.</p>
 			  <h5>Desde.......... $95 (grande) / $50 (chica) / $30 (pizzeta)</h5>
 	      </div>
@@ -391,8 +388,7 @@ Es así que el negocio fue creciendo y avanzando a paso firme hasta alcanzar un 
 	      			<div class="col-md-3 col-sm-12 centered">
 	      				<h5>HORARIOS</h5>
 	      				<p class="text-p">Domingos a Jueves: 7:00 am a 2:00 am<br />
-	      				Viernes y Sábados: 7:00 am a 3:00 am<br />
-	      				Vísperas de Feriados: 7:00 am a 3:00 am</p>
+	      				Viernes y Sábados: 7:00 am a 3:00 am</p>
 	      			</div>
 	      			<div class="col-md-3 col-sm-12 centered">
 	      				<h5>TELÉFONOS</h5>
@@ -424,6 +420,43 @@ Es así que el negocio fue creciendo y avanzando a paso firme hasta alcanzar un 
 				<a target="_blank" href="https://es.foursquare.com/v/restaurante-un-rinc%C3%B3n-de-napoli/4d76a9bb3cc3cbff1cbb143e
 "><i class="ion-social-foursquare"></i></a>
 			</p>
+
+			<div class="row" style="padding-left: 106px;">	
+				<div class="col-md-8 col-md-offset-2">
+					<div class="row">
+						<div class="col-md-4 col-md-offset-3">
+							<img class="img-responsive aligncenter" src="assets/img/familia/familia.png" alt="">
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-2">
+							<a href="http://walrussolutions.com/frigorifico_napoli">
+								<img class="img-responsive aligncenter" src="assets/img/familia/fnapoli.png" alt="">
+							</a>
+						</div>
+						<div class="col-md-2">
+							<a href="http://walrussolutions.com/freskito">
+								<img class="img-responsive aligncenter" src="assets/img/familia/freskito.png" alt="">
+							</a>
+						</div>
+						<div class="col-md-2">
+							<a href="http://walrussolutions.com/frigorificosj">
+								<img class="img-responsive aligncenter" src="assets/img/familia/fsanjuan.png" alt="">
+							</a>
+						</div>
+						<div class="col-md-2">
+							<a href="http://walrussolutions.com/supermercado">
+								<img class="img-responsive aligncenter" src="assets/img/familia/super.png" alt="">
+							</a>
+						</div>
+						<div class="col-md-2">
+							<a href="http://walrussolutions.com/restaurante">
+								<img class="img-responsive aligncenter" src="assets/img/familia/unrincon.png" alt="">
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
 
 				<!-- <p class="text-p centered mt">Copyright 2015 - LandingSumo.com</p> -->
 		</div><!--/container -->
