ultimo cambios frigorif

--- a/frigorifico_napoli/index.html
+++ b/frigorifico_napoli/index.html
@@ -628,6 +628,54 @@
     
 </div>
 
+<div id="decorative1" style="position:relative">
+            <div class="row" style="padding-left: 106px;">  
+                <div class="span3">
+                </div>   
+                <div class="span6">
+                    <div class="row">
+                        <div class="span1">
+                        </div>   
+                        <div class="span2">
+                            <img class="img-responsive aligncenter" src="images/familia/familia.png" alt="" style="margin-left: 48px;">
+                        </div>
+                     
+                    </div>
+                    <div class="row">
+                        <div class="span1">
+                            <a href="http://walrussolutions.com/frigorifico_napoli">
+                                <img class="img-responsive aligncenter" src="images/familia/fnapoli.png" alt="">
+                            </a>
+                        </div>
+                        <div class="span1">
+                            <a href="http://walrussolutions.com/freskito">
+                                <img class="img-responsive aligncenter" src="images/familia/freskito.png" alt="">
+                            </a>
+                        </div>
+                        <div class="span1">
+                            <a href="http://walrussolutions.com/frigorificosj">
+                                <img class="img-responsive aligncenter" src="images/familia/fsanjuan.png" alt="">
+                            </a>
+                        </div>
+                        <div class="span1">
+                            <a href="http://walrussolutions.com/supermercado">
+                                <img class="img-responsive aligncenter" src="images/familia/super.png" alt="">
+                            </a>
+                        </div>
+                        <div class="span1">
+                            <a href="http://walrussolutions.com/restaurante">
+                                <img class="img-responsive aligncenter" src="images/familia/unrincon.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="span3">
+                </div>  
+            </div>
+            <br />
+</div>
+
+
 <div id="trabajarModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
