fin de los últimos cambios

--- a/supermercado/index.html
+++ b/supermercado/index.html
@@ -58,13 +58,13 @@
                     <div class="col-md-6 col-sm-6">
                         <div class="center">
                             <h1><strong>Nuestra misi&oacute;n</strong></h1>
-                            <p>Somos un grupo empresario orientado a la gastronomía, con presencia interprovincial, apasionados en brindar un servicio personalizado con la mejor variedad de productos en la mayor amplitud horaria y al mejor precio posible.</p>
+                            <p>Somos una empresa sanjuanina que conf&iacute;a en su gente y en su provincia. Apasionados por lo que hacemos brindamos un excelent&iacute;simo servicio con la mayor variedad de productos posibles para la satisfacci&oacute;n de nuestros clientes.</p>
                         </div>
                     </div><!--/.col-md-4-->
                     <div class="col-md-6 col-sm-6">
                         <div class="center">
                             <h1><strong>Nuestra visi&oacute;n</strong></h1>
-                            <p>Sustentados en la calidad de nuestros servicios y amplia variedad de productos, logremos superar las expectativas de nuestros clientes en todo momento. </p>
+                            <p>Sustentados en la calidad de nuestros servicios, productos y gran amplitud horaria, buscamos convertirnos en el super de todos los sanjuaninos. <i>La mejor opci&oacute;n, siempre.</i> </p>
                         </div>
                     </div><!--/.col-md-4-->
                 </div><!--/.row-->
@@ -412,7 +412,6 @@
                             <p>
                                 &nbsp;&nbsp;- Domingos a Jueves: 7:00 am – 2:00 am<br>
                                 &nbsp;&nbsp;- Viernes y Sábados: 7:00 am – 3:00 am<br>
-                                &nbsp;&nbsp;- Vísperas de feriados: 7:00 am – 3:00 am<br>
                             </p>
                         </div>
                     </div><!--/.col-md-4-->
@@ -518,6 +517,17 @@
             </div><!--/.box-->
         </div><!--/.container-->
     </section><!--/#contact-->
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <div class="row text-center">
+            <img src="images/familia/familia.png" width="100">
+        </div>
+        <div class="row text-center">
+            <a href="/frigorifico_napoli"><img src="images/familia/fnapoli.png" width="100"></a>
+            <a href="/freskito"><img src="images/familia/freskito.png" width="100"></a>
+            <a href="/frigorificosj"><img src="images/familia/fsanjuan.png" width="100"></a>
+            <a href="/supermercado"><img src="images/familia/super.png" width="100"></a>
+            <a href="/restaurante"><img src="images/familia/unrincon.png" width="100"></a>
+    </div>
 
     <footer id="footer">
         <div class="container hidden">
