--- a/freskito/index.html
+++ b/freskito/index.html
@@ -426,12 +426,23 @@ Hoy el frigor&iacute;fico brinda a sus clientes un servicio profesional y de alt
 					   </form><!-- form -->
 					</p>
 				</div><!-- col -->
-				
-				
-
 			</div><!-- row -->
-		
+			<hr>
+			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+				<div class="row text-center">
+					<img src="assets/img/familia/familia.png" width="100">
+				</div>
+				<div class="row text-center">
+					<a href="/frigorifico_napoli"><img src="assets/img/familia/fnapoli.png" width="100"></a>
+					<a href="/freskito"><img src="assets/img/familia/freskito.png" width="100"></a>
+					<a href="/frigorificosj"><img src="assets/img/familia/fsanjuan.png" width="100"></a>
+					<a href="/supermercado"><img src="assets/img/familia/super.png" width="100"></a>
+					<a href="/restaurante"><img src="assets/img/familia/unrincon.png" width="100"></a>
+			</div>
+		</div>
 		</div><!-- container -->
+
+		
 
 		<div id="footerwrap">
 			<div class="container">
