urls finales correctas

--- a/frigorificosj/index.html
+++ b/frigorificosj/index.html
@@ -267,11 +267,11 @@
                         <img src="assets/img/familia/familia.png" width="100">
                     </div>
                     <div class="row text-center">
-                        <a href="/frigorifico_napoli"><img src="assets/img/familia/fnapoli.png" width="100"></a>
-                        <a href="/freskito"><img src="assets/img/familia/freskito.png" width="100"></a>
-                        <a href="/frigorificosj"><img src="assets/img/familia/fsanjuan.png" width="100"></a>
-                        <a href="/supermercado"><img src="assets/img/familia/super.png" width="100"></a>
-                        <a href="/restaurante"><img src="assets/img/familia/unrincon.png" width="100"></a>
+                        <a href="http://frigorificosj.com.ar/frigorifico_napoli"><img src="assets/img/familia/fnapoli.png" width="100"></a>
+                        <a href="http://frigorificosj.com.ar/freskito"><img src="assets/img/familia/freskito.png" width="100"></a>
+                        <a href="http://frigorificosj.com.ar/frigorificosj"><img src="assets/img/familia/fsanjuan.png" width="100"></a>
+                        <a href="http://supernapoli.com.ar/supermercado"><img src="assets/img/familia/super.png" width="100"></a>
+                        <a href="http://supernapoli.com.ar/restaurante"><img src="assets/img/familia/unrincon.png" width="100"></a>
                     </div>
                 </div>
                 <div class="footer clearfix">
@@ -417,11 +417,11 @@
                         <img src="assets/img/familia/familia.png" width="100">
                     </div>
                     <div class="row text-center">
-                        <a href="/frigorifico_napoli"><img src="assets/img/familia/fnapoli.png" width="100"></a>
-                        <a href="/freskito"><img src="assets/img/familia/freskito.png" width="100"></a>
-                        <a href="/frigorificosj"><img src="assets/img/familia/fsanjuan.png" width="100"></a>
-                        <a href="/supermercado"><img src="assets/img/familia/super.png" width="100"></a>
-                        <a href="/restaurante"><img src="assets/img/familia/unrincon.png" width="100"></a>
+                        <a href="http://frigorificosj.com.ar/frigorifico_napoli"><img src="assets/img/familia/fnapoli.png" width="100"></a>
+                    <a href="http://frigorificosj.com.ar/freskito"><img src="assets/img/familia/freskito.png" width="100"></a>
+                    <a href="http://frigorificosj.com.ar/frigorificosj"><img src="assets/img/familia/fsanjuan.png" width="100"></a>
+                    <a href="http://supernapoli.com.ar/supermercado"><img src="assets/img/familia/super.png" width="100"></a>
+                    <a href="http://supernapoli.com.ar/restaurante"><img src="assets/img/familia/unrincon.png" width="100"></a>
                     </div>
                 </div>
                 <div class="footer clearfix">
@@ -543,11 +543,11 @@
                         <img src="assets/img/familia/familia.png" width="100">
                     </div>
                     <div class="row text-center">
-                        <a href="/frigorifico_napoli"><img src="assets/img/familia/fnapoli.png" width="100"></a>
-                        <a href="/freskito"><img src="assets/img/familia/freskito.png" width="100"></a>
-                        <a href="/frigorificosj"><img src="assets/img/familia/fsanjuan.png" width="100"></a>
-                        <a href="/supermercado"><img src="assets/img/familia/super.png" width="100"></a>
-                        <a href="/restaurante"><img src="assets/img/familia/unrincon.png" width="100"></a>
+                        <a href="http://frigorificosj.com.ar/frigorifico_napoli"><img src="assets/img/familia/fnapoli.png" width="100"></a>
+                    <a href="http://frigorificosj.com.ar/freskito"><img src="assets/img/familia/freskito.png" width="100"></a>
+                    <a href="http://frigorificosj.com.ar/frigorificosj"><img src="assets/img/familia/fsanjuan.png" width="100"></a>
+                    <a href="http://supernapoli.com.ar/supermercado"><img src="assets/img/familia/super.png" width="100"></a>
+                    <a href="http://supernapoli.com.ar/restaurante"><img src="assets/img/familia/unrincon.png" width="100"></a>
                     </div>
                 </div>
                 <div class="footer clearfix">
@@ -678,11 +678,11 @@
                         <img src="assets/img/familia/familia.png" width="100">
                     </div>
                     <div class="row text-center">
-                        <a href="/frigorifico_napoli"><img src="assets/img/familia/fnapoli.png" width="100"></a>
-                        <a href="/freskito"><img src="assets/img/familia/freskito.png" width="100"></a>
-                        <a href="/frigorificosj"><img src="assets/img/familia/fsanjuan.png" width="100"></a>
-                        <a href="/supermercado"><img src="assets/img/familia/super.png" width="100"></a>
-                        <a href="/restaurante"><img src="assets/img/familia/unrincon.png" width="100"></a>
+                        <a href="http://frigorificosj.com.ar/frigorifico_napoli"><img src="assets/img/familia/fnapoli.png" width="100"></a>
+                    <a href="http://frigorificosj.com.ar/freskito"><img src="assets/img/familia/freskito.png" width="100"></a>
+                    <a href="http://frigorificosj.com.ar/frigorificosj"><img src="assets/img/familia/fsanjuan.png" width="100"></a>
+                    <a href="http://supernapoli.com.ar/supermercado"><img src="assets/img/familia/super.png" width="100"></a>
+                    <a href="http://supernapoli.com.ar/restaurante"><img src="assets/img/familia/unrincon.png" width="100"></a>
                     </div>
                 </div>
                 <div class="footer clearfix">
