--- a/supermercado/index.html
+++ b/supermercado/index.html
@@ -522,11 +522,11 @@
             <img src="images/familia/familia.png" width="100">
         </div>
         <div class="row text-center">
-            <a href="/frigorifico_napoli"><img src="images/familia/fnapoli.png" width="100"></a>
-            <a href="/freskito"><img src="images/familia/freskito.png" width="100"></a>
-            <a href="/frigorificosj"><img src="images/familia/fsanjuan.png" width="100"></a>
-            <a href="/supermercado"><img src="images/familia/super.png" width="100"></a>
-            <a href="/restaurante"><img src="images/familia/unrincon.png" width="100"></a>
+            <a href="http://frigorificosj.com.ar/frigorifico_napoli"><img src="images/familia/fnapoli.png" width="100"></a>
+            <a href="http://frigorificosj.com.ar/freskito"><img src="images/familia/freskito.png" width="100"></a>
+            <a href="http://frigorificosj.com.ar/frigorificosj"><img src="images/familia/fsanjuan.png" width="100"></a>
+            <a href="http://supernapoli.com.ar/supermercado"><img src="images/familia/super.png" width="100"></a>
+            <a href="http://supernapoli.com.ar/restaurante"><img src="images/familia/unrincon.png" width="100"></a>
     </div>
 
     <footer id="footer">
