--- a/frigorifico_napoli/index.html
+++ b/frigorifico_napoli/index.html
@@ -643,27 +643,27 @@
                     </div>
                     <div class="row">
                         <div class="span1">
-                            <a href="http://walrussolutions.com/frigorifico_napoli">
+                            <a href="http://frigorificosj.com.ar/frigorifico_napoli">
                                 <img class="img-responsive aligncenter" src="images/familia/fnapoli.png" alt="">
                             </a>
                         </div>
                         <div class="span1">
-                            <a href="http://walrussolutions.com/freskito">
+                            <a href="http://frigorificosj.com.ar/freskito">
                                 <img class="img-responsive aligncenter" src="images/familia/freskito.png" alt="">
                             </a>
                         </div>
                         <div class="span1">
-                            <a href="http://walrussolutions.com/frigorificosj">
+                            <a href="http://frigorificosj.com.ar/frigorificosj">
                                 <img class="img-responsive aligncenter" src="images/familia/fsanjuan.png" alt="">
                             </a>
                         </div>
                         <div class="span1">
-                            <a href="http://walrussolutions.com/supermercado">
+                            <a href="http://supernapoli.com.ar/supermercado">
                                 <img class="img-responsive aligncenter" src="images/familia/super.png" alt="">
                             </a>
                         </div>
                         <div class="span1">
-                            <a href="http://walrussolutions.com/restaurante">
+                            <a href="http://supernapoli.com.ar/restaurante">
                                 <img class="img-responsive aligncenter" src="images/familia/unrincon.png" alt="">
                             </a>
                         </div>
